--- a/compose/.env
+++ b/compose/.env
@@ -1,5 +1,17 @@
-MYSQL_UNAME=root
-MYSQL_ROOT_PASWD=naresh
-MYSQL_DB=datastore
-MYSQL_JDBC_URL=jdbc:mysql://mydb:3306/datastore?createDatabaseIfNotExist=true
+# MySQL Configuration
+MYSQL_ROOT_PASSWORD=Cloud122
+MYSQL_DATABASE=datastore
+MYSQL_USER=admin
+MYSQL_PASSWORD=Devops123
 
+# Spring Boot datasource (backend)
+SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/datastore?createDatabaseIfNotExist=true
+SPRING_DATASOURCE_USERNAME=admin
+SPRING_DATASOURCE_PASSWORD=Devops123
+
+# Ports
+BACKEND_PORT=8084
+FRONTEND_PORT=8501
+
+# Frontend API call
+API_URL=http://backend:8084
